<resources>
	<string name="app_name">Simple Interval Timer</string>
	<string name="decrease_intervals">Decrease intervals</string>
	<string name="increase_intervals">Increase intervals</string>
	<string name="intervals">Intervals</string>
	<string name="work_time">Work Time</string>
	<string name="rest_time">Rest Time</string>
	<string name="increase_minutes">Increase minutes</string>
	<string name="decrease_minutes">Decrease minutes</string>
	<string name="increase_seconds">Increase seconds</string>
	<string name="decrease_seconds">Decrease seconds</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="discard">Discard</string>
	<string name="discard_changes_message">Are you sure you want to discard the changes?</string>
	<string name="discard_changes_title">Discard Changes</string>
	<string name="start">Start</string>
	<string name="start_timer">Start Timer</string>
	<string name="confirm">Confirm</string>
	<string name="dismiss">Dismiss</string>
	<string name="name">Name</string>
	<string name="enter_name">Enter Name</string>
	<string name="home">Home</string>
	<string name="my_intervals">My Intervals</string>
	<string name="end">End</string>
	<string name="end_timer">End Timer</string>
	<string name="end_timer_message">Are you sure you want to end the timer?</string>
	<string name="delete">Delete</string>
	<string name="delete_interval_message_with_placeholder">Are you sure you want to delete the time interval \"%1$s\"?</string>
	<string name="prepare">Prepare</string>
	<string name="work">Work</string>
	<string name="rest">Rest</string>
	<string name="done">Done</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="last_interval">Last Interval</string>
	<string name="null_string">null</string>
</resources>
